--- a/asite/index.html
+++ b/asite/index.html
@@ -5,41 +5,21 @@
        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
        <style>
            @import url('./assets/css/loadingrain.css');
-
-           #rotate {
-               animation: spin 6s steps(36) infinite;
-               margin-bottom: 50px;
-           }
-
-           @keyframes spin {
-               from {
-                   transform: rotate(0deg);
-               }
-
-               to {
-                   transform: rotate(360deg);
-               }
-           }
-
-           #index {
-               width: 100%;
-               display: none;
-           }
-
-           .sun {
-               text-align: center;
-           }
-
-           .happy-dog {
-               display: flex;
-               justify-content: center;
-           }
-
-           a {
-               text-decoration: none;
-               color: #6C7784;
-           }
+           @import url('./assets/css/index.css');
        </style>
+       <!-- google search console -->
+       <meta name="google-site-verification" content="aMhxD50Qb1wfV9Zgn2oSp28v0A4n0HcKcm5avGZR8H4" />
+       <!-- Global site tag (gtag.js) - Google Analytics -->
+       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171085431-1"></script>
+       <script>
+           window.dataLayer = window.dataLayer || [];
+
+           function gtag() {
+               dataLayer.push(arguments);
+           }
+           gtag('js', new Date());
+           gtag('config', 'UA-171085431-1');
+       </script>
    </head>
 
    <body>
@@ -132,6 +112,11 @@
                                <a rel="noopener">博客</a>
                            </div>
                        </li>
+                       <li class="nav__item">
+                           <div class="nav__item-text">
+                               <a href='/resource' rel="noopener">资源</a>
+                           </div>
+                       </li>
                        <li class="nav__item" id='toPlan'>
                            <div class="nav__item-text">
                                <a rel="noopener">计划</a>
@@ -146,77 +131,85 @@
                </div>
                <label class="nav__btn" for="menu-cb"></label>
            </nav>
-           <div class="sun"><img id='rotate' style="width:10vmin;height:10vmin" title='愿你今日美好' type="image/svg+xml" />
-           </div>
-           <div class="happy-dog">
-               <div class="husky">
-                   <div class="mane">
-                       <div class="coat"></div>
-                   </div>
-                   <div class="body">
-                       <div class="head">
-                           <div class="ear"></div>
-                           <div class="ear"></div>
-                           <div class="face">
-                               <div class="eye"></div>
-                               <div class="eye"></div>
-                               <div class="nose"></div>
-                               <div class="mouth">
-                                   <div class="lips"></div>
-                                   <div class="tongue"></div>
+           <div class="animate-content">
+               <div class="sun"><img id='rotate' style="width:10vmin;height:10vmin" title='愿你今日美好'
+                       type="image/svg+xml" />
+               </div>
+               <div class="happy-dog">
+                   <div class="husky">
+                       <div class="mane">
+                           <div class="coat"></div>
+                       </div>
+                       <div class="body">
+                           <div class="head">
+                               <div class="ear"></div>
+                               <div class="ear"></div>
+                               <div class="face">
+                                   <div class="eye"></div>
+                                   <div class="eye"></div>
+                                   <div class="nose"></div>
+                                   <div class="mouth">
+                                       <div class="lips"></div>
+                                       <div class="tongue"></div>
+                                   </div>
                                </div>
                            </div>
+                           <div class="torso"></div>
                        </div>
-                       <div class="torso"></div>
-                   </div>
-                   <div class="legs">
-                       <div class="front-legs">
-                           <div class="leg"></div>
-                           <div class="leg"></div>
+                       <div class="legs">
+                           <div class="front-legs">
+                               <div class="leg"></div>
+                               <div class="leg"></div>
+                           </div>
+                           <div class="hind-leg">
+                           </div>
                        </div>
-                       <div class="hind-leg">
-                       </div>
-                   </div>
-                   <div class="tail">
                        <div class="tail">
                            <div class="tail">
                                <div class="tail">
                                    <div class="tail">
                                        <div class="tail">
-                                           <div class="tail"></div>
+                                           <div class="tail">
+                                               <div class="tail"></div>
+                                           </div>
                                        </div>
                                    </div>
                                </div>
                            </div>
                        </div>
                    </div>
+                   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" style="position:absolute">
+                       <defs>
+                           <filter id="squiggly-0">
+                               <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise"
+                                   seed="0" />
+                               <feDisplacementMap id="displacement" in="SourceGraphic" in2="noise" scale="2" />
+                           </filter>
+                           <filter id="squiggly-1">
+                               <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise"
+                                   seed="1" />
+                               <feDisplacementMap in="SourceGraphic" in2="noise" scale="3" />
+                           </filter>
+
+                           <filter id="squiggly-2">
+                               <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise"
+                                   seed="2" />
+                               <feDisplacementMap in="SourceGraphic" in2="noise" scale="2" />
+                           </filter>
+                           <filter id="squiggly-3">
+                               <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise"
+                                   seed="3" />
+                               <feDisplacementMap in="SourceGraphic" in2="noise" scale="3" />
+                           </filter>
+
+                           <filter id="squiggly-4">
+                               <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise"
+                                   seed="4" />
+                               <feDisplacementMap in="SourceGraphic" in2="noise" scale="1" />
+                           </filter>
+                       </defs>
+                   </svg>
                </div>
-               <svg xmlns="http://www.w3.org/2000/svg" version="1.1" style="position:absolute">
-                   <defs>
-                       <filter id="squiggly-0">
-                           <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="0" />
-                           <feDisplacementMap id="displacement" in="SourceGraphic" in2="noise" scale="2" />
-                       </filter>
-                       <filter id="squiggly-1">
-                           <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="1" />
-                           <feDisplacementMap in="SourceGraphic" in2="noise" scale="3" />
-                       </filter>
-
-                       <filter id="squiggly-2">
-                           <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="2" />
-                           <feDisplacementMap in="SourceGraphic" in2="noise" scale="2" />
-                       </filter>
-                       <filter id="squiggly-3">
-                           <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="3" />
-                           <feDisplacementMap in="SourceGraphic" in2="noise" scale="3" />
-                       </filter>
-
-                       <filter id="squiggly-4">
-                           <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="4" />
-                           <feDisplacementMap in="SourceGraphic" in2="noise" scale="1" />
-                       </filter>
-                   </defs>
-               </svg>
            </div>
        </div>
        <script>
