--- a/asite/iplan.html
+++ b/asite/iplan.html
@@ -6,8 +6,7 @@
    </head>
 
    <body>
-        <div id="app"></div>  
-    </script>
+        <div id="app"></div>
+        <script type='text/javascript' src='./pack/iplan.js'></script>
    </body>
-
    </html>
