docs: update daily

--- a/anav/index.html
+++ b/anav/index.html
@@ -12,7 +12,7 @@
        <!-- Global site tag (gtag.js) - Google Analytics -->
        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171085431-1"></script>
        <!-- fullpage -->
-       <link rel="stylesheet" type="text/css" href="./dist/fullpage.min.css" />
+       <link rel="stylesheet" type="text/css" href="./utils/fullpage.min.css" />
        <script>
            window.dataLayer = window.dataLayer || [];
 
@@ -100,7 +100,7 @@
            </div>
        </div>
        <div id="fullpage" style="display: none;">
-        <nav class="nav">
+       <nav class="nav">
             <input type="checkbox" checked='checked' class="nav__cb" id="menu-cb" />
             <div class="nav__content">
                 <ul class="nav__items">
@@ -210,9 +210,20 @@
                    </div>
                </div>
            </div>
-           <div class="section" ></div>
+           <div class="section" style="text-align: center;">
+                <span style="color: aliceblue;">
+                    桥带麻袋，前端书签导航我正在做！(*^_^*)
+                </span>
+                <br>
+                <br>
+                <br>
+                <span style="color: aliceblue;">
+                    关注我的公众号：【掘金安东尼】，关注前端技术、也关注生活。持续更新ing......
+                </span>
+            </div>
        </div>
-       <script text="javascript" src="./dist/fullpage.js"></script>
+       <script text="javascript" src="./utils/fullpage.js">
+    </script>
        <script>
            var myFullpage = new fullpage('#fullpage', {
                //Navigation
