docs: adjust anav index

--- a/anav/index.html
+++ b/anav/index.html
@@ -213,6 +213,13 @@
            <div class="section" style="text-align: center;">
                 <span style="color: aliceblue;">
                     桥带麻袋，前端书签导航我正在做！(*^_^*)
+                     <a style="color: #ffa2de;" target="_blank" href="https://github.com/TUARAN/FEMB/blob/master/README.md"> => Git 地址</a>
+                </span>
+                <br>
+                <br>
+                <br>
+                <span style="color: aliceblue;">
+                + 我的微信：ifuckinghigh
                 </span>
                 <br>
                 <br>
